<resources>
    <string name="app_name">EventHunter</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_events">Events</string>
    <string name="menu_organizers">Organizers</string>
    <string name="menu_collaborators">Collaborators</string>
    <string name="event_hunter">Event Hunter</string>

    <string name="register_capsLk">REGISTER</string>
    <string name="login_capsLk">LOGIN</string>

    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="download">Download</string>

    <string name="already_registered_login">Already Registered? Login</string>
    <string name="new_here_sign_up">New here? Sign up!</string>

    <string name="name_example_com">name@example.com</string>
    <string name="name">Name</string>
    <string name="select_user_type">Select User Type</string>
    <string name="password_hint">************</string>
    <string name="example_text">example</string>

    <string name="app_logo_image">This is our logo image!</string>

    <string name="event_name">Event Name</string>
    <string name="description">Description</string>
    <string name="seat_number">Number of seats</string>
    <string name="event_location">Location</string>
    <string name="event_type">Event Type</string>
    <string name="events_type">Events Type</string>
    <string name="create_event_form">Create Event Form</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="one_time_event">One Time Event</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
    <string name="end_hour">End Hour</string>
    <string name="start_hour">Start Hour</string>
    <string name="previous">Previous</string>
    <string name="create">Create</string>
    <string name="repeatable_event">Repeatable Event</string>
    <string name="event_image">Event Image</string>
    <string name="upload">Upload</string>
    <string name="next">Next</string>
    <string name="repetitions">Repetitions</string>
    <string name="collaborators">Collaborators</string>
    <string name="collaborator_image">Collaborator Image</string>
    <string name="remove">Remove</string>
    <string name="details">Details</string>
    <string name="date">Date</string>
    <string name="cancel">Cancel</string>
    <string name="reserve">Reserve</string>
    <string name="seats">Seats</string>
    <string name="ticket_price">Ticket price</string>
    <string name="my_reservations">My reservations</string>
    <string name="number_of_reserved_seats">Number of reserved seats</string>
    <string name="total_price">Total price</string>

    <string name="event_s_picture">This is the event\'s picture!</string>
    <string name="organizer_s_picture">This is organizer\'s picture!</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_logout">Logout</string>
    <string name="organizer_image">Organizer Image</string>
    <string name="organizer">Organizer</string>
    <string name="address_header">Address:</string>
    <string name="phone_number_header">Phone Number:</string>
    <string name="number_of_organized_events_header">Organized Events:</string>
    <string name="events_type_header">Events Type:</string>
    <string name="email_header">E-Mail:</string>
    <string name="email">E-Mail:</string>
    <string name="address_example">Timisoara, Str. Pacii, nr 10</string>
    <string name="phone_number_example">0733–435–662</string>
    <string name="number_of_organized_events_example">34</string>
    <string name="events_type_example">Music Events</string>
    <string name="schedule_recurring_events">Schedule - Events</string>
    <string name="organizer_profile">Organizer Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="event_details">Event Details</string>
    <string name="address">Address</string>
    <string name="location">Location</string>
    <string name="number_of_available_seats">Number of available seats</string>
    <string name="phone_number">Phone Number</string>
    <string name="schedule">Schedule</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="filter_collaborator_name">Filter Collaborator Name</string>
    <string name="collaborator">Collaborator</string>
    <string name="view_profile">View Profile</string>
    <string name="type_of_events">Type of events</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="seats_number">Seats Number</string>
    <string name="pick">Pick</string>
    <string name="from_camera">From Camera</string>
    <string name="from_gallery">From Gallery</string>
    <string name="contact_info">Contact Info</string>
    <string name="future_events">Future Events</string>
    <string name="past_events">Past Events</string>
    <string name="collaborator_name_example">Collaborator Name</string>
</resources>