<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group
        android:id="@+id/drawer_menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home_events"
            android:icon="@drawable/ic_baseline_event_24"
            android:title="@string/menu_events" />
        <item
            android:id="@+id/nav_home_organizers"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/menu_organizers" />
        <item
            android:id="@+id/nav_home_collaborators"
            android:icon="@drawable/ic_baseline_people_24"
            android:title="@string/menu_collaborators" />
    </group>
</menu>