<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_color"
        tools:context=".ui.profile.OrganizerProfileFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/organizerProfileImage"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:contentDescription="@string/organizer_image"
                android:src="@drawable/ic_baseline_account_circle_24"
                app:civ_border_color="#FF000000"
                app:civ_border_width="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/organizerNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/name"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/organizerProfileImage"
                app:layout_constraintStart_toStartOf="@+id/organizerProfileImage"
                app:layout_constraintTop_toBottomOf="@+id/organizerProfileImage" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"
                android:text="@string/organizer"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/organizerNameTextView"
                app:layout_constraintStart_toStartOf="@+id/organizerNameTextView"
                app:layout_constraintTop_toBottomOf="@+id/organizerNameTextView" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/createEventFabButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
            app:srcCompat="@drawable/ic_baseline_add_24" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:stretchColumns="*">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/address_header" />

                    <TextView
                        android:id="@+id/organizerAddressTextView"
                        android:text="@string/address_example"
                        android:textAlignment="textStart"
                        android:textColor="@color/black" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp">

                    <TextView android:text="@string/phone_number_header" />

                    <TextView
                        android:id="@+id/organizerPhoneNumberTextView"
                        android:text="@string/phone_number_example"
                        android:textAlignment="textStart"
                        android:textColor="@color/black" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp">

                    <TextView android:text="@string/number_of_organized_events_header" />

                    <TextView
                        android:id="@+id/numberOfOrganizedEventsTextView"
                        android:text="@string/number_of_organized_events_example"
                        android:textAlignment="textStart"
                        android:textColor="@color/black" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp">

                    <TextView android:text="@string/events_type_header" />

                    <TextView
                        android:id="@+id/organizerTypeTextView"
                        android:text="@string/events_type_example"
                        android:textAlignment="textStart"
                        android:textColor="@color/black" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp">

                    <TextView android:text="@string/email_header" />

                    <TextView
                        android:id="@+id/organizerEmailTextView"
                        android:text="@string/name_example_com"
                        android:textAlignment="textStart"
                        android:textColor="@color/black" />
                </TableRow>

            </TableLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:text="@string/schedule_recurring_events"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <CalendarView
            android:id="@+id/calendarViewOrganizerSchedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>