<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout8"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.collaborator.CollaboratorInfoFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/address_header"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/collaboratorAddressTextView"
                    android:text="@string/address_example"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp">

                <TextView
                    android:text="@string/phone_number_header"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/collaboratorPhoneNumberTextView"
                    android:text="@string/phone_number_example"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp">

                <TextView
                    android:text="@string/email"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/collaboratorEmailTextView"
                    android:text="@string/name_example_com"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </TableRow>

        </TableLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>